--- a/9-Naive-Bayes.qmd
+++ b/9-Naive-Bayes.qmd
@@ -82,14 +82,9 @@ The expression for Bayes’ Theorem can also be derived by applying the definiti
 P(A|B) = \frac{P(A \cap B)}{P(B)} = P(A) \times \frac{P(B|A)}{P(B)}.
 \end{equation}
 
-These equivalent expressions result from two ways of expressing the joint probability $P(A \cap B)$. This formulation highlights how a prior belief $P(A)$ is updated using the likelihood $P(B|A)$ and normalized by the marginal probability $P(B)$.
+These equivalent expressions result from two ways of expressing the joint probability $P(A \cap B)$. This formulation highlights how a prior belief $P(A)$ is updated using the likelihood $P(B|A)$ and normalized by the marginal probability $P(B)$. Bayes’ Theorem thus provides a principled way to refine beliefs by incorporating new evidence. This principle underpins many probabilistic learning techniques, including the Naive Bayes classifier introduced in this chapter.
 
-Bayes’ Theorem thus provides a principled way to refine beliefs by incorporating new evidence. This principle underpins many probabilistic learning techniques, including the Naive Bayes classifier introduced in this chapter.
-
-Let us now apply Bayes’ Theorem to a practical example: estimating the probability that a customer has a good risk profile ($A$) given that they have a mortgage ($B$), using the `risk` dataset from the **liver** package.
-
-::: {#ex-bayes-risk .example}
-We begin by loading the dataset and inspecting the relevant data:
+To see how Bayes’ Theorem operates in practice, consider we want to estimate the probability that a customer has a good risk profile ($A$) given that they have a mortgage ($B$), using the `risk` dataset from the **liver** package. We begin by loading the dataset and inspecting the relevant data:
 
 ```{r}
 library(liver)  
@@ -128,7 +123,6 @@ P(\text{Good Risk} | \text{Mortgage = Yes}) & = \frac{P(\text{Good Risk} \cap \t
 \end{equation}
 
 This result indicates that among customers with mortgages, the observed proportion of those with a good risk profile is lower than in the general population. Such insights help financial institutions refine credit risk models by incorporating new evidence systematically.
-:::
 
 > *Practice:* Using the same contingency table, compute the probability that a customer has a *good risk* profile given that they *do not* have a mortgage. How does this probability compare to the value obtained for customers with a mortgage? *Hint:* Identify the relevant counts in the table and apply Bayes’ theorem. You may verify your result using R.
 
