--- a/index.qmd
+++ b/index.qmd
@@ -21,7 +21,7 @@ source("_common.R")
 
 \clearpage
 
-::: {.content-visible when-format="html"}
+```{asis index-1, echo=knitr::is_html_output()}
 # Welcome {-}
 
 Welcome to the online companion to *Data Science Foundations and Machine Learning with R: From Data to Decisions*. This platform supports your learning journey with hands-on code, datasets, and resources designed to reinforce key ideas from the book.
@@ -30,18 +30,18 @@ Whether you are a student, professional, or independent learner, this book offer
 
 Built around the *Data Science Workflow*, the book guides you through data wrangling, exploratory analysis, modeling, evaluation, and deployment. A dedicated chapter introduces R from scratch, ensuring a smooth start for beginners. Using R, an open-source language widely used in both academia and industry, you will gain hands-on experience with:
 
-- Data cleaning and transformation  
-- Visual exploration and statistical summaries  
-- Supervised learning techniques including decision trees, regression, k-nearest neighbors, naive Bayes, and neural networks  
-- Unsupervised learning with clustering  
-- Model evaluation and comparison
+- Data cleaning and transformation;  
+- Visual exploration and statistical summaries;  
+- Supervised learning techniques including decision trees, regression, k-nearest neighbors, naive Bayes, and neural networks;
+- Unsupervised learning with clustering;  
+- Model evaluation and comparison.
 
 The book also includes the [**liver**](https://CRAN.R-project.org/package=liver) package, available on [CRAN](https://cran.r-project.org/web/packages/liver/index.html), which provides curated datasets and helper functions to support interactive learning.
 
 You can always access the latest version of the book at  
-👉 <https://book-data-science-r.netlify.app>  
+👉 [https://book-data-science-r.netlify.app](https://book-data-science-r.netlify.app)  
 and explore the source code or contribute via GitHub:  
-👉 <https://github.com/RezaMoammadi/Book-Data-Science-R>
+👉 [https://github.com/RezaMoammadi/Book-Data-Science-R](https://github.com/RezaMoammadi/Book-Data-Science-R)
 
 ---
 
@@ -55,10 +55,9 @@ This is a living resource and your feedback helps improve it. If you have sugges
 Thank you for being part of this learning journey!
 
 <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://github.com/RezaMoammadi/Book-Data-Science">Book</a> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://www.uva.nl/profile/a.mohammadi">Reza Mohammadi</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt=""></a></p>
-
+                  
 <hr>
 
 <a href="https://www.netlify.com"><img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg"/></a>
 The book website is hosted on [Netlify](https://www.netlify.com).
-
-:::
+```
