--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -277,20 +277,22 @@ With missing values addressed and feature types confirmed, the dataset is now su
 
 ## Exploring Categorical Features {#sec-EDA-categorical}
 
-Categorical features group observations into distinct classes and often capture key demographic or behavioral characteristics. In the `churn` dataset, such features include `gender`, `education`, `marital`, `card_category`, and the outcome variable `churn`. Examining how these features are distributed, and how they relate to customer churn, provides an initial understanding of customer retention and disengagement.
+Categorical features group observations into distinct classes and often capture key demographic or behavioral characteristics. In the `churn` dataset, such features include `gender`, `marital`, `education`, `card_category`, and the outcome variable `churn`. Examining how these features are distributed, and how they relate to customer churn, provides an initial understanding of customer retention and disengagement.
 
-We begin by examining the distribution of the target feature `churn`, which indicates whether a customer has closed a credit card account. Understanding this distribution is important for assessing class balance, a factor that influences both model training and the interpretation of predictive performance. The bar plot and pie chart below summarize the proportion of customers who churned:
+We begin by examining the distribution of the target feature `churn`, which indicates whether a customer has closed a credit card account. Understanding this distribution allows us to assess class balance, an important factor that affects both model training and the interpretation of predictive performance. The bar plot and pie chart below summarise the proportion of customers who churned:
 
 ```{r out.width = "100%"}
 #| layout-ncol: 2
-#| layout-widths: [2, 1]   # left plot 3x wider than right
+#| layout-widths: [2, 1]
 #| fig-width: 6
 #| fig-height: 4
 
 library(ggplot2)
 
 # Bar plot
-ggplot(data = churn, aes(x = churn, label = scales::percent(prop.table(after_stat(count))))) +
+ggplot(data = churn, 
+       aes(x = churn, 
+           label = scales::percent(prop.table(after_stat(count))))) +
   geom_bar(fill = c("#F4A582", "#A8D5BA")) +
   geom_text(stat = "count", vjust = 0.4, size = 6)
 
@@ -301,11 +303,11 @@ ggplot(churn, aes(x = 1, fill = churn)) +
   theme_void()
 ```
 
-Both plots show that most customers remain active (`churn = "no"`), while only a small proportion (about `r round(prop.table(table(churn$churn))["yes"] * 100, 1)` percent) have closed their accounts. The bar plot makes the class imbalance immediately visible and supports direct comparison of counts or proportions. The pie chart conveys the same information but is less effective for analytical comparison; it is included here primarily to illustrate alternative presentation styles for a binary outcome.
+Both plots show that most customers remain active (`churn = "no"`), while only a small proportion (about `r round(prop.table(table(churn$churn))["yes"] * 100, 0)` percent) have closed their accounts. The bar plot makes the class imbalance immediately visible and supports straightforward comparison of counts or proportions. The pie chart conveys the same information but is included primarily to illustrate an alternative presentation style for a categorical outcome.
 
-A simpler bar plot, without colours or percentage labels, can be created as follows:
+In the enhanced bar plot, we display the proportion of each category using the `prop.table()` function and distinguish the groups using the `fill` argument. A simpler version, without colours or percentage labels, can be created as follows:
 
-``` r
+```r
 ggplot(data = churn) +
   geom_bar(aes(x = churn))
 ```
@@ -353,7 +355,7 @@ From an exploratory perspective, this finding suggests that gender alone is not 
 
 ### Relationship Between Card Category and Churn {.unnumbered .unlisted}
 
-Card type is one of the most informative service features in the `churn` dataset. The variable `card_category` places customers into four tiers: blue, silver, gold, and platinum. These categories reflect different benefit levels and often correspond to distinct customer segments.
+Card type is one of the more informative service features in the `churn` dataset. The variable `card_category` classifies customers into four tiers: blue, silver, gold, and platinum. These categories reflect different benefit levels and typically correspond to distinct customer segments.
 
 ```{r out.width = "100%"}
 #| layout-ncol: 2
@@ -369,22 +371,24 @@ ggplot(data = churn) +
   labs(x = "Card Category", y = "Proportion")
 ```
 
-The left panel displays the number of churners and non-churners within each card tier. The right panel shows proportions within each tier. The distribution is highly imbalanced: more than 93 percent of customers hold a blue card, the entry-level option. This reflects typical product portfolios in retail banking, where most customers hold standard cards. Because the other categories are much smaller, differences across tiers must be interpreted with care.
+The left panel shows the number of churners and non-churners within each card tier. We observe that the distribution of customers across categories is highly imbalanced: more than 90 percent of customers hold a blue card, the entry-level option. This reflects typical retail banking portfolios, where standard products dominate. Because the remaining tiers are comparatively small, differences across categories must be interpreted with caution. The right panel presents a proportional bar plot, allowing us to compare churn rates within each tier. We observe slightly higher churn rates among gold and platinum cardholders; however, because these tiers contain relatively few customers, we treat this difference cautiously and regard it as an exploratory signal rather than a definitive pattern. To examine the group sizes and churn counts more precisely, we inspect the corresponding contingency table:
 
 ```{r}
-addmargins(table(churn$churn, churn$card_category, 
-                 dnn = c("Churn", "Card Category")))
+addmargins(
+  table(churn$churn, churn$card_category,
+        dnn = c("Churn", "Card Category"))
+)
 ```
 
-The contingency table confirms the visual pattern. Churn rates are slightly higher among blue and silver cardholders and lower among customers with gold or platinum cards. Although modest, this difference suggests that customers with premium cards are more engaged and therefore less likely to close their accounts.
+The contingency table confirms the proportional comparison shown above. While churn rates differ across tiers, the magnitude of the differences is relatively small. Given the substantial imbalance in group sizes, especially the dominance of the blue category, overall churn patterns are strongly influenced by this large segment.
 
-Because the silver, gold, and platinum groups are relatively small, analysts often combine similar categories to ensure adequate group sizes for Modeling. A common approach is to separate “blue” from “silver+” (a combined group of silver, gold, and platinum cardholders). This simplification reduces sparsity, stabilises estimates, and often produces clearer and more interpretable models.
+From an exploratory perspective, card category appears to carry some signal regarding churn, but the effect is moderate. Because the silver, gold, and platinum groups are comparatively small, analysts may consider consolidating categories in later modeling stages (for example, separating “blue” from “premium” cards) to ensure adequate group sizes and more stable estimates.
 
 > *Practice:* Reclassify the card categories into two groups, “blue” and “silver+”, using the `fct_collapse()` function from the **forcats** package (as in Section [-@sec-ch3-data-pre-adult]). Then recreate both bar plots and compare the patterns. Does the simplified version make the churn differences easier to see? Would this reclassification improve interpretability in a predictive model?
 
 ### Relationship Between Income and Churn {.unnumbered .unlisted}
 
-Income level reflects purchasing power and financial stability, both of which may influence a customer’s likelihood of closing a credit account. The feature `income` in the `churn` dataset includes five ordered categories, ranging from *less than \$40K* to *over \$120K*. Because missing values were imputed earlier, the feature now provides a complete and consistent basis for comparison.
+Income level reflects purchasing power and financial stability, both of which may influence a customer’s likelihood of closing a credit account. The feature `income` in the `churn` dataset consists of five ordered categories, ranging from *less than \$40K* to *over \$120K*. Because missing values were addressed earlier, this variable now provides a consistent basis for comparison across groups.
 
 ```{r out.width = "100%"}
 #| layout-ncol: 2
@@ -402,22 +406,15 @@ ggplot(data = churn) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
-The bar plots indicate a gradual decline in churn as income increases. Customers in the lowest bracket (less than `$40K`) churn slightly more often than those in higher brackets, while customers earning over `$120K` show the lowest churn rates. Although the trend is modest, it suggests that higher-income customers maintain more stable account relationships. To examine this pattern more closely, we can inspect the corresponding contingency table:
+The left panel shows the number of churners and non-churners within each income bracket. Because the lowest income category contains the largest number of customers, raw counts alone make it difficult to assess relative churn rates across brackets. The right panel displays proportions within each income level, allowing for a more meaningful comparison.
 
-```{r}
-addmargins(table(churn$churn, churn$income, 
-                 dnn = c("Churn", "Income")))
-```
+From the proportional bar plot, we observe that churn rates are broadly similar across income brackets, with no clear monotonic pattern. While small differences exist, income appears to provide only a weak signal of churn behaviour in this dataset. At this exploratory stage, income does not emerge as a strong differentiating feature compared with behavioural indicators examined earlier.
 
-The contingency table supports this observation. Lower-income customers may be more sensitive to service fees or constrained credit limits, while higher-income customers typically exhibit more consistent spending patterns and longer account tenure.
-
-From an analytical perspective, income provides a weak yet interpretable signal of churn behavior. Because the categories follow a natural progression, treating `income` as an ordered factor may be useful during Modeling.
-
-> *Practice:* Convert `income` into an ordered factor using `factor(..., ordered = TRUE)` and recreate the proportional bar plot. Does the plot change? Next, reorder the categories using `fct_relevel()` and observe how the ordering affects readability. Small adjustments to factor ordering often make EDA plots easier to interpret.
+> *Practice:* Convert `income` into an ordered factor using `factor(..., ordered = TRUE)` and recreate the proportional bar plot. Does the visual interpretation change? Next, reorder the categories using `fct_relevel()` and examine how the ordering affects readability. Small adjustments to factor ordering can substantially improve the clarity of EDA visualisations.
 
 ### Relationship Between Marital Status and Churn {.unnumbered .unlisted}
 
-Marital status may influence financial behavior and account management, making it a useful demographic feature to explore in the context of churn. The `marital` feature in the `churn` dataset includes three categories (*married*, *single*, and *divorced*) which may reflect differences in household structure, shared responsibilities, or spending patterns.
+Marital status may influence financial behaviour and account management, making it a relevant demographic feature to examine in the context of churn. The `marital` variable in the `churn` dataset includes three categories (*married*, *single*, and *divorced*), which may reflect differences in household structure, shared responsibilities, or spending patterns.
 
 ```{r out.width = "100%"}
 #| layout-ncol: 2
@@ -433,18 +430,11 @@ ggplot(data = churn) +
   labs(x = "Marital Status", y = "Proportion")
 ```
 
-The count plot on the left shows that most customers are married, followed by single and divorced individuals. The proportional bar plot on the right highlights that single customers churn at a slightly higher rate than married or divorced customers. This difference is consistent but small, suggesting only a weak relationship between marital status and account closure.
+The count plot on the left shows that most customers are married, followed by single and divorced individuals. The proportional bar plot on the right indicates that churn rates are broadly similar across the three categories, with only a slightly lower rate among married customers. The differences are modest and do not suggest a strong association between marital status and churn.
 
-```{r}
-addmargins(table(churn$churn, churn$marital, 
-                 dnn = c("Churn", "Marital Status")))
-```
+From an exploratory perspective, marital status appears to provide limited explanatory value compared with behavioural and financial indicators such as transaction activity, utilization ratio, and customer-service interactions. In Section [-@sec-ch5-chi-square-test], we formally assess whether the observed differences between categorical variables such as `marital` and `churn` are statistically significant using the Chi-square test.
 
-The contingency table supports the visual impression. Although single customers exhibit marginally higher churn rates, the overall association between marital status and churn appears limited. Small behavioral differences may exist across household types, but marital status is unlikely to be a strong predictor of churn on its own.
-
-From an analytical standpoint, this feature offers only minor explanatory value. Later sections will show that behavioral and financial indicators—including spending activity, utilization ratio, and customer-service interactions—provide more substantial insight into churn risk. Because both `marital` and `churn` are categorical variables, the Chi-square test introduced in Section [-@sec-ch5-chi-square-test] will formally assess whether the observed differences are statistically meaningful.
-
-> *Practice:* Examine whether `education` is associated with churn. Create bar plots for counts and proportions, inspect the contingency table, and consider whether any observed differences appear meaningful in practice. This exercise reinforces the workflow used for exploring categorical features.
+> *Practice:* Examine whether `education` is associated with churn. Create bar plots for counts and proportions, inspect the contingency table, and consider whether the observed differences appear practically meaningful. This exercise reinforces the exploratory workflow for categorical features.
 
 ## Exploring Numerical Features {#sec-EDA-sec-numeric}
 
@@ -456,7 +446,7 @@ In the following subsections, we use summary statistics and visualizations to ex
 
 ### Customer Contacts and Churn {.unnumbered .unlisted}
 
-The number of customer service contacts in the past year (`contacts_count_12`) offers insight into customer engagement and potential dissatisfaction. This feature is a count variable with small integer values, making bar plots more appropriate than boxplots or density plots. Bar plots clearly display how frequently customers interacted with support and allow easy comparison between churned and active accounts.
+The number of customer service contacts in the past year (`contacts_count_12`) provides insight into customer engagement and potential dissatisfaction. This variable is a count feature with small integer values, making bar plots more appropriate than boxplots or density plots. Bar plots clearly display how frequently customers contacted support and allow straightforward comparison between churned and active accounts.
 
 ```{r out.width = "100%"}
 #| layout-ncol: 2
@@ -472,7 +462,16 @@ ggplot(data = churn) +
   labs(x = "Number of Contacts in 12 Months", y = "Proportion")
 ```
 
-Both plots show that customers who contact customer service more frequently are more likely to churn. The increase is particularly noticeable for those with four or more interactions during the year. This pattern suggests that repeated service contacts may reflect concerns, dissatisfaction, or unresolved issues. From an analytical perspective, `contacts_count_12` provides a clear behavioral signal: frequent contact is associated with elevated churn risk. Because it is easy to interpret and directly linked to customer experience, this feature often plays a meaningful role in churn Modeling and early-warning retention strategies.
+The count plot on the left shows that most customers contact customer service two or three times per year, with fewer customers reporting either no contacts or more than four. The proportional bar plot on the right reveals a clear pattern: churn rates increase as the number of contacts rises. The increase is particularly noticeable for customers with four or more interactions during the year.
+
+From an exploratory perspective, this pattern suggests that frequent service contacts may be associated with dissatisfaction, unresolved issues, or increased service dependency. Compared with demographic features examined earlier, `contacts_count_12` provides a stronger behavioural signal of churn risk. Its clear directional pattern makes it an especially informative feature for subsequent modeling and predictive analysis.
+
+
+
+
+
+
+
 
 ### Transaction Amount and Churn {.unnumbered .unlisted}
 
@@ -489,7 +488,7 @@ ggplot(data = churn) +
   labs(x = "Churn", y = "Total Transaction Amount")
 
 ggplot(data = churn) +
-  geom_density(aes(x = transaction_amount_12, fill = churn), alpha = 0.6) +
+  geom_density(aes(x = transaction_amount_12, fill = churn), alpha = 0.4, linewidth = 0.5) +
   labs(x = "Total Transaction Amount", y = "Density")
 ```
 
@@ -499,9 +498,17 @@ From an exploratory perspective, this pattern indicates that sustained reduction
 
 > *Practice:* Recreate the density plot for `transaction_amount_12` using a histogram instead. Experiment with different bin widths and compare the resulting plots. How sensitive are your conclusions to these choices? Which visualization would you use for exploratory analysis, and which for reporting results?
 
+
+
+
+
+
+
+
+
 ### Credit Limit and Churn {.unnumbered .unlisted}
 
-The total credit line assigned to a customer (`credit_limit`) reflects both financial capacity and the bank’s assessment of creditworthiness. Customers with higher credit limits are often more established or have demonstrated reliable repayment behavior, which may be associated with a lower likelihood of churn. Because credit limits vary substantially across customers, we use violin plots and histograms to examine both distributional shape and differences between churn groups.
+The total credit line assigned to a customer (`credit_limit`) reflects both financial capacity and the bank’s assessment of creditworthiness. Customers with higher credit limits are often more established or have demonstrated reliable repayment behaviour, which may be associated with a lower likelihood of churn. Because credit limits vary substantially across customers, we use violin plots and histograms to examine both distributional shape and differences between churn groups.
 
 ```{r out.width = "100%"}
 #| layout-ncol: 2
@@ -517,17 +524,15 @@ ggplot(data = churn) +
   labs(x = "Credit Limit", y = "Count")
 ```
 
-The violin plot suggests that customers who churn tend to have lower credit limits on average, although the overlap between the two groups is substantial. The histogram provides additional insight into the overall distribution, revealing that most customers fall into a lower credit limit range, with a smaller group holding substantially higher limits. This pattern gives the appearance of two broad clusters, one concentrated below approximately \$7,000 and another above \$30,000, though this observation remains exploratory.
+The violin plot shows substantial overlap in the distribution of credit limits between churners and non-churners, indicating that the two groups are not clearly separated by this feature alone. Although customers who churn tend to have slightly lower credit limits on average, the difference is modest. Both plots reveal that the distribution of credit limits is strongly right-skewed, with a long upper tail extending toward values around \$30,000. The histogram further suggests that most customers fall into a lower credit-limit range, with a smaller group holding substantially higher limits. This pattern gives the appearance of two broad segments, one concentrated below approximately \$7,000 and another above \$30,000, though this observation remains exploratory.
 
-Taken together, the plots indicate a modest shift toward higher credit limits among customers who remain active, but the separation between groups is not pronounced. To assess whether the observed difference in average credit limits is statistically meaningful, we return to this comparison in Section [-@sec-ch5-two-sample-t-test], where we introduce formal hypothesis testing for numerical features.
-
-From an exploratory standpoint, credit limit appears to be a weaker differentiating feature than transaction activity, but it still provides useful contextual information about customer profiles. Its primary value at this stage lies in complementing behavioral indicators rather than serving as a standalone signal of churn.
+Taken together, the plots indicate a modest shift toward higher credit limits among customers who remain active, but the overall separation between churners and non-churners is limited. From an exploratory perspective, `credit_limit` provides a weaker differentiating signal than behavioural indicators such as transaction activity or service contacts, and its primary value lies in complementing these measures rather than serving as a standalone predictor of churn. We assess whether the observed difference in average credit limits is statistically meaningful in Section [-@sec-ch5-two-sample-t-test], where we introduce formal hypothesis testing for numerical features.
 
 > *Practice:* Create boxplots and density plots for `credit_limit` stratified by churn status. Compare these with the violin plot and histogram shown in this section. How do the different visualizations influence your perception of group overlap and central tendency? Discuss which plots are most informative at this exploratory stage.
 
 ### Months on Book and Churn {.unnumbered .unlisted}
 
-The feature `months_on_book` measures how long a customer has held their credit card account. Tenure often reflects relationship stability, accumulated benefits, and familiarity with the service. Customers with longer histories typically show stronger loyalty, whereas newer customers may be more vulnerable to unmet expectations or early dissatisfaction.
+The feature `months_on_book` measures how long a customer has held their credit card account. Tenure often reflects relationship stability, accumulated benefits, and familiarity with the service. Customers with longer histories might be expected to show stronger loyalty, whereas newer customers may be more vulnerable to early dissatisfaction.
 
 ```{r out.width = "100%"}
 #| layout-ncol: 2
@@ -548,11 +553,20 @@ ggplot(data = churn) +
   labs(x = "Months on Book", y = "Count")
 ```
 
-Both plots suggest that customers who churn tend to have slightly shorter tenures than those who remain active. The difference is not large, but it is consistent: the median tenure for churners is lower by a few months. The pronounced peak around 36 months likely reflects a cohort effect, possibly linked to a major acquisition campaign that occurred three years prior to the observation period.
+Both plots show substantial overlap between churners and non-churners. While churners appear to have slightly shorter tenures on average, the difference is small and difficult to distinguish clearly from the visualisations alone. The distributions are broadly similar, suggesting that tenure does not strongly separate the two groups in this dataset.
 
-From a business perspective, these patterns highlight the importance of early relationship management. Targeted onboarding, proactive engagement in the first year, and timely communication may help build loyalty among newer customers and reduce attrition during the initial stages of the customer lifecycle.
+The histogram reveals a pronounced concentration around 36 months, which may reflect a cohort effect, such as a past acquisition campaign or a product lifecycle milestone. However, without additional contextual data, this remains speculative.
+
+From an exploratory perspective, `months_on_book` appears to provide only a weak signal of churn risk. Any potential difference in tenure would require formal statistical testing to determine whether it is meaningful. At this stage, behavioural indicators examined earlier offer clearer separation between churners and non-churners.
 
 > *Practice:* Create a density plot for `months_on_book` stratified by churn status. Compare these with the histogram shown in this section. How do the different visualizations influence your perception of group overlap and central tendency? Discuss which plots are most informative at this exploratory stage.
+
+
+
+
+
+
+
 
 ### Ratio of Transaction Amount (Q4/Q1) and Churn {.unnumbered .unlisted}
 
@@ -566,11 +580,11 @@ The feature `ratio_amount_Q4_Q1` compares total spending in the fourth quarter w
 ggplot(data = churn) +
   geom_boxplot(aes(x = churn, y = ratio_amount_Q4_Q1), 
                fill = c("#F4A582", "#A8D5BA")) +
-  labs(x = "Churn", y = "Transaction Amount Ratio")
+  labs(x = "Churn", y = "Transaction Ratio (Q4/Q1)")
 
 ggplot(data = churn) +
   geom_density(aes(x = ratio_amount_Q4_Q1, fill = churn), alpha = 0.6) +
-  labs(x = "Transaction Amount Ratio", y = "Density")
+  labs(x = "Transaction Ratio (Q4/Q1)", y = "Density")
 ```
 
 The plots show that customers who churn tend to have lower Q4-to-Q1 ratios, indicating a reduction in spending toward the end of the year. Customers who remain active typically maintain or modestly increase their spending. This downward shift in activity may serve as an early sign of disengagement: gradual reductions in spending often precede account closure.
@@ -740,7 +754,7 @@ ggplot(data = sub_churn,
        aes(x = churn, 
            label = scales::percent(prop.table(after_stat(count))))) +
   geom_bar(fill = c("#F4A582", "#A8D5BA")) + 
-  geom_text(stat = "count", vjust = 0.4, size = 6) 
+  geom_text(stat = "count", vjust = 0.4, size = 9) 
 ```
 
 Within this subset, the proportion of churners is noticeably higher than in the full dataset. This reinforces the earlier observation that customers with low or inconsistent usage—particularly those who spend little *and* use their card infrequently—are at elevated risk of churn.
@@ -752,16 +766,14 @@ From a Modeling perspective, this example highlights the importance of feature i
 The feature `card_category` divides customers into four product tiers (blue, silver, gold, and platinum). The feature `transaction_amount_12` measures the total amount spent over the past twelve months. Examining these features together provides insight into how card tier relates to spending behavior. Because `transaction_amount_12` is continuous and `card_category` is categorical, density plots are a natural choice for comparing entire distributions. They highlight differences in the shape, centre, and spread of spending among card tiers.
 
 ```{r out.width = "70%"}
-ggplot(data = churn, 
-       aes(x = transaction_amount_12, fill = card_category)) +
-  geom_density(alpha = 0.5) +
-  labs(x = "Total Transaction Amount (12 months)",
-       y = "Density",
+ggplot(data = churn) +
+  geom_density(aes(x = transaction_amount_12, fill = card_category), alpha = 0.5) +
+  labs(x = "Total Transaction Amount (12 months)", y = "Density",
        fill = "Card Category") +
   scale_fill_manual(values = c("#1E90FF", "gray30", "#FFD700", "#BFC7CE"))
 ```
 
-The density curves show a clear gradient across tiers: customers with gold and platinum cards tend to have noticeably higher transaction amounts. Their curves are shifted to the right relative to those of blue and silver cardholders. Blue card customers, who constitute more than 90 percent of the entire customer base, display a broader distribution concentrated in the lower and middle spending ranges. Although this imbalance affects how prominent each curve appears, the underlying pattern remains consistent: higher-tier cards are associated with greater spending activity.
+The density curves show a clear gradient across tiers: customers with gold and platinum cards tend to have noticeably higher transaction amounts. Blue card customers, who constitute more than 90 percent of the entire customer base, display a broader distribution concentrated in the lower and middle spending ranges (lower than \$7,000). Although this imbalance affects how prominent each curve appears, the underlying pattern remains consistent: higher-tier cards are associated with greater spending activity.
 
 From a business perspective, this relationship is intuitive. Premium cardholders typically receive enhanced benefits, rewards, or services, and they often belong to customer segments with higher financial engagement. Blue cardholders, by contrast, form a mixed group ranging from highly active customers to those who use their card only occasionally. These observations can guide differentiated retention and marketing strategies—for example, offering targeted upgrades to high-spending blue cardholders or designing tailored benefits to encourage greater engagement among lower-activity segments.
 
@@ -795,7 +807,7 @@ These patterns emphasize that age alone does not determine churn. Instead, demog
 
 The exploratory analysis of the `churn` dataset provides a multifaceted view of customer behavior and the factors associated with churn. By examining categorical features, numerical features, and their interactions, several consistent patterns emerge that are relevant for understanding and Modeling customer attrition.
 
-Demographic characteristics show only weak associations with churn. Gender and marital status exhibit small differences in churn rates, and education and income levels display modest variation once other factors are considered. These variables may provide supporting context in Modeling but do not appear to be primary drivers of account closure. In contrast, service-related characteristics such as card category and income bracket offer clearer signals. Customers with higher-tier cards and those in higher income groups churn less often, suggesting that perceived value and financial capacity contribute to account stability.
+Demographic characteristics show only weak associations with churn. Gender and marital status exhibit small differences in churn rates, and income levels display modest variation once other factors are considered. These variables may provide supporting context in Modeling but do not appear to be primary drivers of account closure. In contrast, service-related characteristics such as card category and income bracket offer clearer signals. Customers with higher-tier cards and those in higher income groups churn less often, suggesting that perceived value and financial capacity contribute to account stability.
 
 The numerical features reveal stronger and more actionable patterns. Customers who contact customer service frequently, particularly four or more times within a year, churn at higher rates. This suggests that repeated service interactions may reflect dissatisfaction or unresolved problems. Spending activity, measured by total transaction amount over twelve months, shows a similarly strong relationship with retention. Active customers display higher and more varied spending, whereas churners typically have substantially lower transaction volumes. Declines in spending may therefore serve as early indicators of disengagement.
 
@@ -811,7 +823,7 @@ Overall, the exploratory analysis shows that churn is more closely associated wi
 
 This chapter introduced exploratory data analysis as a practical and systematic step in the data science workflow. Using the `churn` dataset, we demonstrated how graphical and numerical techniques can be used to understand data structure, detect data quality issues, and develop initial hypotheses about customer behavior that guide subsequent analysis.
 
-The analysis began with an overview of the dataset and an initial preparation step, during which missing values encoded as `"unknown"` were identified and resolved. Ensuring that features were clean and correctly typed provided a reliable foundation for exploration. We then examined categorical variables such as gender, education, marital status, income, and card type to characterise customer profiles, followed by numerical features related to credit limits, transaction activity, and utilization.
+The analysis began with an overview of the dataset and an initial preparation step, during which missing values encoded as `"unknown"` were identified and resolved. Ensuring that features were clean and correctly typed provided a reliable foundation for exploration. We then examined categorical variables such as gender, marital status, income, and card type to characterise customer profiles, followed by numerical features related to credit limits, transaction activity, and utilization.
 
 Several consistent relationships emerged from this exploratory analysis. Customers with smaller credit limits, higher utilization ratios, or frequent customer service interactions were more likely to churn. In contrast, customers with higher transaction amounts and lower utilization tended to remain active. These patterns illustrate how EDA can surface potentially important explanatory features before any formal Modeling is undertaken.
 
